# prometheus-docker-limit-exporter

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yaml
example-data/dashboards/: docker-hub-rate-limits-dashboard.json
infra/dashboards/: docker-hub-rate-limits-dashboard.json
src/: main.rs
src/docker/: mod.rs
