[package]
name = "prom-docker-limit-exporter"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^0.13"
tokio = { version = "^0.2", features = ["full"] }
prometheus = "0.11.0" 
warp = "0.2.5"
lazy_static = "1.4.0"
futures = "0.3.8" 
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10", features = ["json","blocking"] }
config = "0.10.1" 
jsonwebtoken = "7.2.0"
serde_json = "1.0.60"
